[*] Added repository url. Updated descriptions

--- a/UniTaskAnalyzer.Package/UniTaskAnalyzer.Package.csproj
+++ b/UniTaskAnalyzer.Package/UniTaskAnalyzer.Package.csproj
@@ -11,12 +11,12 @@
     <PackageId>UniTaskAnalyzer</PackageId>
     <PackageVersion>1.0.0.0</PackageVersion>
     <Authors>Khamro Kamalov</Authors>
-    <RepositoryUrl>http://REPOSITORY_URL_HERE_OR_DELETE_THIS_LINE</RepositoryUrl>
+    <RepositoryUrl>https://github.com/Yggdrasills/UniTaskAnalyzer</RepositoryUrl>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <Description>UniTaskAnalyzer</Description>
     <PackageReleaseNotes>Summary of changes made in this release of the package.</PackageReleaseNotes>
     <Copyright>Copyright</Copyright>
-    <PackageTags>UniTaskAnalyzer, analyzers</PackageTags>
+    <PackageTags>UniTask, UniTaskAnalyzer, analyzers</PackageTags>
     <DevelopmentDependency>true</DevelopmentDependency>
     <NoPackageAnalysis>true</NoPackageAnalysis>
 
