--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
-*.p1 linguist-detectable=false
+*.ps1 linguist-detectable=false
 *.resx linguist-detectable=false
 *.csproj linguist-detectable=false
 *.cs linguist-detectable=true
